@@ -20,8 +20,13 @@ public class Main {
                 continue;
             }
             String commandName = command.getCommandName();
-            List<String> params = command.getArgs();;
+            List<String> params = command.getArgs();
             if("echo".equals(commandName)) {
+                // 检测重定向
+                if(params.contains(">") || params.contains("1>")) {
+                    redirectOutput(params, commandName);
+                    continue;
+                }
                 for (String param : params) {
                     System.out.print(param);
                 }
@@ -32,6 +37,11 @@ public class Main {
             if("cat".equals(commandName)) {
                 // 移除空格
                 params.removeIf(" "::equals);
+                // 检测重定向
+                if(params.contains(">") || params.contains("1>")) {
+                    redirectOutput(params, commandName);
+                    continue;
+                }
                 params.add(0, "cat");
                 Process process = new ProcessBuilder(params).start();
                 //新启两个线程
@@ -67,28 +77,13 @@ public class Main {
             if(pathMap.containsKey(commandName)){
                 // 移除空格
                 params.removeIf(" "::equals);
-                boolean isRedirect = false;
-                String redirectFileName = params.get(params.size() - 1);
-                if(params.contains(">")){
-                    List<String> beforeRedirect = new ArrayList<>();
-                    for(String param : params) {
-                        if(param.equals(">")){
-                            isRedirect = true;
-                        }
-                        if(!isRedirect) {
-                           beforeRedirect.add(param);
-                        }
-                    }
-                    params = beforeRedirect;
+                // 检测重定向
+                if(params.contains(">") || params.contains("1>")) {
+                    redirectOutput(params, commandName);
+                    continue;
                 }
                 params.add(0, commandName);
-                Process process;
-                if(isRedirect) {
-                    ProcessBuilder processBuilder = new ProcessBuilder(params);
-                    processBuilder.redirectOutput(new File(redirectFileName));
-                    process = processBuilder.start();
-                }
-                process = Runtime.getRuntime().exec(params.toArray(new String[0]));
+                Process process = Runtime.getRuntime().exec(params.toArray(new String[0]));
                 // 得到process的输出的方式是getInputStream，这是因为我们要从Java 程序的角度来看，外部程序的输出对于Java来说就是输入，反之亦然。
                 // 外部程序在执行结束后需自动关闭，否则不管是字符流还是字节流均由于既读不到数据，又读不到流结束符，从而出现阻塞Java进程运行的情况
                 // 如果exec启动的Process没有正确处理（stdout/stderr 有一个未读，进程未 waitFor），导致资源没关闭、管道没释放，于是 JVM
@@ -109,6 +104,7 @@ public class Main {
         }
     }
 
+    // 检测到重定向标识符进行输出重定向。方法抽象
     public static Map<String, String> getEnv() {
         Map<String, String> env = new HashMap<>();
         String osName = System.getProperty("os.name").toLowerCase();
@@ -142,5 +138,34 @@ public class Main {
             }
         }
         return env;
+    }
+
+    private static void redirectOutput(List<String> params, String commandName) throws Exception {
+        // 检测重定向
+        if(params.contains(">") || params.contains("1>")) {
+            // 移除空格
+            params.removeIf(" "::equals);
+            boolean isRedirect = false;
+            String redirectFileName = params.get(params.size() - 1);
+            List<String> beforeRedirect = new ArrayList<>();
+            for(String param : params) {
+                if(param.equals(">") || param.equals("1>")){
+                    isRedirect = true;
+                }
+                if(!isRedirect) {
+                    beforeRedirect.add(param);
+                }
+            }
+            beforeRedirect.add(0, commandName);
+            if(isRedirect) {
+                ProcessBuilder processBuilder = new ProcessBuilder(beforeRedirect);
+                processBuilder.redirectOutput(new File(redirectFileName));
+                Process process = processBuilder.start();
+                DealProcessStream err = new DealProcessStream(process.getErrorStream());
+                err.start();
+                err.join();
+                process.waitFor();
+            }
+        }
     }
 }
